manifests/network/cilium/overlays/lab/gateway-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls
spec:
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.1.210
