manifests/network/cilium/overlays/lab/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  hostnames:
  - "lab-hubble.laskonet.com"
